--- a/index.html
+++ b/index.html
@@ -4,13 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./styles.css">
 </head>
-<body>
-    <h1>Odin Recipes</h1>
-    <ul>
-        <li><a href="./recipes/pizza.html">Pizza Crust</a></li>
-        <li><a href="./recipes/mpotatoes.html">Mashed Potatoes</a></li>
-        <li><a href="./recipes/chickenc.html">Chicken chasseur</a></li>
-    </ul>
+<body id="all">
+    
+    <div class="cont">
+        <h1>Odin Recipes</h1>
+        <ul class="list">
+            <li><a href="./recipes/pizza.html">Pizza Crust</a></li>
+            <li><a href="./recipes/mpotatoes.html">Mashed Potatoes</a></li>
+            <li><a href="./recipes/chickenc.html">Chicken chasseur</a></li>
+        </ul>
+    </div>
 </body>
 </html>
