feat box and styles to css

--- a/recipes/mpotatoes.html
+++ b/recipes/mpotatoes.html
@@ -4,27 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./mp.css">
+    <link rel="stylesheet" href="./recipes.css">
 </head>
 <body id="all">
-    <div class="cont">
-        <h1>Basic Mashed Potatoes</h1>
-        <img id="imge" src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F43%2F2022%2F04%2F18%2F24771-basic-mashed-potatoes-mfs318.jpg&q=60&c=sc&poi=auto&orient=true&h=512" rel="noopener noreferrer" alt="Mashed Potatoes">
+<div id="container">
+    <h1>Basic Mashed Potatoes</h1>
+    <div id="imge">
+        <img class="bpotatos" src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F43%2F2022%2F04%2F18%2F24771-basic-mashed-potatoes-mfs318.jpg&q=60&c=sc&poi=auto&orient=true&h=512" rel="noopener noreferrer" alt="Mashed Potatoes">
     </div>
 
+    <h2>Description</h2>
     <div class="cont">
-        <h2>Description</h2>
         <p>This mashed potato recipe is perfect if you're looking for good, old-fashioned mashed potatoes. 
             Made with just potatoes, milk, butter, and optional garlic, this go-to recipe makes a classic holiday dish.
             Learn how to make mashed potatoes that come out smooth, creamy, and delicious every time! 
             Serve with gravy or extra butter on top.</p>
-        <p>Prep Time: 12 mins</p>
-        <p>Cook Time: 20 mins</p>
-        <p>Additional Time: 35 mins</p>
+        <div id="ext">
+            <p>Prep Time: 12 mins</p>
+            <p>Cook Time: 20 mins</p>
+            <p>Additional Time: 35 mins</p>
+        </div>
     </div>
     
+    <h2>Ingredients</h2>
     <div class="cont">
-        <h2>Ingredients</h2>
         <ul>
             <li>2 pounds baking potatoes, peeled and quartered</li>
             <li>3 cloves garlic, peeled, or to taste (Optional)</li>
@@ -34,8 +37,8 @@
         </ul>
     </div>
 
+    <h2>Steps</h2>
     <div class="cont">
-        <h2>Steps</h2>
         <ol>
             <li>Bring a large pot of salted water to a boil. Add potatoes and garlic, lower heat to medium, and simmer until potatoes are tender, 15 to 20 minutes.</li>
             <li>When the potatoes are almost finished, heat milk and butter in a small saucepan over low heat until butter is melted.</li>
@@ -43,5 +46,6 @@
             <li>Season with salt and pepper. Serve and enjoy!</li>
         </ol>
     </div>  
+</div>
 </body>
 </html>
