--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -4,27 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./pz.css">
+    <link rel="stylesheet" href="./recipes.css">
 </head>
 <body id="all">
-    <div class="cont">
-        <h1>Pizza Crust</h1>
-        <img id="imge" src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F43%2F2022%2F06%2F22%2F7904421-pizza-dough-iii-safparr-1x1-1.jpg&q=60&c=sc&poi=auto&orient=true&h=512" rel="noopener noreferrer" alt="Pizza Crust">
+<div id="container">
+    <h1>Pizza Crust</h1>
+    <div id="imge">
+        <img class="pizza" src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F43%2F2022%2F06%2F22%2F7904421-pizza-dough-iii-safparr-1x1-1.jpg&q=60&c=sc&poi=auto&orient=true&h=512" rel="noopener noreferrer" alt="Pizza Crust">
     </div>
 
+    <h2>Description</h2>
     <div class="cont">
-        <h2>Description</h2>
         <p>An easy, quick and delicious recipe.</p>
-        <p>Prep Time: 15 mins</p>
-        <p>Cook Time: 20 mins</p>
-        <p>Additional Time: 35 mins</p>
-        <p>Total Time: 1 hr 10 mins</p>
-        <p>Servings: 12</p>
-        <p>Yield: 1 large crust</p>
+        <div id="ext">
+            <p>Prep Time: 15 mins</p>
+            <p>Cook Time: 20 mins</p>
+            <p>Additional Time: 35 mins</p>
+            <p>Total Time: 1 hr 10 mins</p>
+            <p>Servings: 12</p>
+            <p>Yield: 1 large crust</p>
+        </div>
     </div>
     
+    <h2>Ingredients</h2>
     <div class="cont">
-        <h2>Ingredients</h2>
         <ul>
             <li>1 (.25 ounce) package active dry yeast</li>
             <li>1 cup warm water (110 degrees F/45 degrees C)</li>
@@ -35,8 +38,8 @@
         </ul>
     </div>
 
+    <h2>Steps</h2>
     <div class="cont">
-        <h2>Steps</h2>
         <ol>
             <li>Dissolve yeast in warm water in a small bowl. Let stand until creamy, about 5 minutes.</li>
             <li>Combine bread flour, olive oil, sugar, salt, and yeast mixture in a mixing bowl; stir well to combine. Beat until a stiff dough has formed. Cover the bowl; let rise at room temperature until dough doubles in volume, about 30 minutes.</li>
@@ -45,5 +48,6 @@
             <li>Bake pizza in the preheated oven until cheese is bubbly and crust is golden brown, about 20 minutes.</li>
         </ol>
     </div>
+</div>
 </body>
 </html>
