--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body id="all">
-    
+<div id="container">
+    <h1>Odin Recipes</h1>
     <div class="cont">
-        <h1>Odin Recipes</h1>
         <ul class="list">
             <li><a href="./recipes/pizza.html">Pizza Crust</a></li>
             <li><a href="./recipes/mpotatoes.html">Mashed Potatoes</a></li>
             <li><a href="./recipes/chickenc.html">Chicken chasseur</a></li>
         </ul>
     </div>
+</div>
 </body>
 </html>
